--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start & node server.js",
+    "start": "expo start",
     "server": "node server.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
